src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_6_lexical_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
assertion_line: 25
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 5,
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Divide,
        position: Position {
            line: 1,
            column: 3,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 10,
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
]
