src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_8_syntax_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: MinusInfix {
            left_hand: Integer {
                literal: 5,
            },
            right_hand: Infix {
                left_hand: Integer {
                    literal: 10,
                },
                operator: Multiply,
                right_hand: Integer {
                    literal: 10,
                },
            },
        },
    },
]
