src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_9_evaluation.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: evaluation
---
Integer {
    value: 3,
}
