src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_9_syntax_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Infix {
                left_hand: Integer {
                    literal: 10,
                },
                operator: Divide,
                right_hand: Integer {
                    literal: 5,
                },
            },
            operator: Plus,
            right_hand: Integer {
                literal: 1,
            },
        },
    },
]
